<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_audio_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioPlayerActivity">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/coverImage"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"/>


    <RelativeLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:background="@color/purple_200"
        android:alpha="0.7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Now playing:"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:id="@+id/textView" />
        <TextView
            android:id="@+id/now_playing_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Now playing.."
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@color/purple_700"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        android:alpha="0.7"
        android:layout_alignTop="@+id/controls">
    </LinearLayout>


    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/controls_bar"
        android:padding="5dp">


        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bw"
            android:id="@+id/backward"
            android:onClick="seekBackward"
            android:src="@drawable/ic_action_rewind"
            android:background="@null"
            android:contentDescription="TODO"/>

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:id="@+id/pause"
            android:onClick="pause"
            android:src="@drawable/ic_action_pause"
            android:background="@null"
            android:contentDescription="TODO"/>

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:id="@+id/play"
            android:onClick="play"
            android:src="@drawable/ic_action_play"
            android:background="@null"
            android:contentDescription="TODO"/>

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fw"
            android:id="@+id/forward"
            android:onClick="seekForward"
            android:src="@drawable/ic_action_fast_forward"
            android:background="@null"
            android:contentDescription="TODO" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/controls_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentTime"
            android:text="@string/_00_00_00"
            android:textColor="@color/purple_700"
            android:padding="5dp"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalTime"
            android:text="@string/_00_00_00"
            android:textColor="@color/purple_700"
            android:padding="5dp"/>

    </LinearLayout>
</RelativeLayout>